crates/swc/tests/tsc-references/subtypingWithCallSignaturesA_es2015.1.normal.js
var r5 = foo3((x)=>''); // error
